crates/aven-check/tests/fixtures/check/invalid/numeric-defaulting-mismatch.av
inferred = 42
badInferred : Float = inferred
intValue : Int = 1
badInt : Float = intValue
floatValue : Float = 1
badFloat : Int = floatValue
